# make524brief

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/streamlit524/: __init__.py  app.py
